<resources>
    <string name="app_name">LostAndFound</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_lost">Lost</string>
    <string name="title_found">Found</string>
    <string name="title_chat">Chat</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>

    <!-- For the floating action button -->
    <string name="lost_text">I have lost an item</string>
    <string name="found_text">I have found an item</string>

    <!-- For the titles displayed on the log in page -->
    <string name="login_title">Welcome back!</string>
    <string name="login_description">Please log in with your university email to continue.</string>
    <string name="register_title">Create an account</string>
    <string name="register_description">Only your name will be visible to others.</string>

    <!-- Error messages during registeration -->
    <string name="first_name_empty_error">First name cannot be empty</string>
    <string name="last_name_empty_error">Last name cannot be empty</string>

    <string name="email_empty_error">Email cannot be empty</string>
    <string name="email_end_string">warwick.ac.uk</string>
    <string name="email_not_uni_error">Please register with your university email (@warwick.ac.uk)</string>

    <string name="password_empty_error">Password cannot be empty</string>
    <string name="password_too_short_error">Password must be at least 8 characters long</string>
    <string name="password_no_uppercase_or_lowercase_error">Password must have at least one uppercase and lowercase character</string>
    <string name="password_no_number_error">Password must have at least one numerical character</string>
    <string name="password_no_special_characters_error">Password must have at least one special character</string>
    <string name="email_exists_error">An account with this email already exists, please login.</string>

    <string name="email_or_password_incorrect_error"> The email or password provided is incorrect. If you don\'t have an account, please register below. </string>
    <string name="invalid_login_error"> You are already logged in. Please log out first.</string>

    <string name="confirm_email_title">Confirm your email</string>
    <string name="confirm_email_description">Please enter the 6-digit verificiation code we have sent to your email address.</string>



    <!-- Variables used for sending emails -->
    <string name="sender_host">smtp.gmail.com</string>
    <string name="confirm_email_subject">"Lost and Found app - Please confirm your email"</string>
    <string name="confirm_email_body">is your verification code.</string>

    <!-- Securely store these variables -->
    <string name="sender_email">lostfoundapp3@gmail.com</string>
    <string name="sender_password">srtx rvkp lpyc kwos</string>
</resources>