<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_lost"
        android:icon="@drawable/question_mark_icon"
        android:title="@string/title_lost" />

    <item
        android:id="@+id/navigation_found"
        android:icon="@drawable/check_icon"
        android:title="@string/title_found" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search_icon"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/chat_icon"
        android:title="@string/title_chat" />
</menu>