<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.lostandfound.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_lost"
        android:name="com.example.lostandfound.ui.lost.LostFragment"
        android:label="@string/title_lost"
        tools:layout="@layout/fragment_lost" />

    <fragment
        android:id="@+id/navigation_found"
        android:name="com.example.lostandfound.ui.found.FoundFragment"
        android:label="@string/title_found"
        tools:layout="@layout/fragment_found" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.lostandfound.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.lostandfound.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

</navigation>